--- a/postAST.html
+++ b/postAST.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>postMessage</title>
+    <title>postAST</title>
 
     <script src="locales/ast.js"></script>
 
