--- a/postAllEntries.html
+++ b/postAllEntries.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>postMessage</title>
+    <title>postAllEntries</title>
 
     <script src="locales/entries.js"></script>
 
