--- a/postEachEntry.html
+++ b/postEachEntry.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>postMessage</title>
+    <title>postEachEntry</title>
 
     <script src="locales/entries.js"></script>
 
