--- a/postFormattedEntity.html
+++ b/postFormattedEntity.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>postMessage</title>
+    <title>postFormattedEntity</title>
 
     <script src="locales/entries.js"></script>
     <script src="lib/resolver.js"></script>
