--- a/postEachEntry.html
+++ b/postEachEntry.html
@@ -9,9 +9,12 @@
     <script>
 
       window.envEntries = Object.create(null);
-      for (var i = 0, node; node = ast[i]; i++) {
+      for (var i = 0, node; node = window.ast[i]; i++) {
         window.envEntries[node.$i] = createEntry(node, 'en-US', 'app');
       }
+
+      window.ast = null;
+      delete window.ast;
 
       function receive(evt) {
         var entry = window.envEntries[evt.data];
