--- a/postFormattedEntity.html
+++ b/postFormattedEntity.html
@@ -10,9 +10,12 @@
     <script>
 
       window.envEntries = Object.create(null);
-      for (var i = 0, node; node = ast[i]; i++) {
+      for (var i = 0, node; node = window.ast[i]; i++) {
         window.envEntries[node.$i] = createEntry(node, 'en-US', 'app');
       }
+
+      window.ast = null;
+      delete window.ast;
 
       function receive(evt) {
         var formatted = format(window.envEntries[evt.data]);
