--- a/postFormattedEntity.html
+++ b/postFormattedEntity.html
@@ -18,7 +18,7 @@
       delete window.ast;
 
       function receive(evt) {
-        var formatted = format(window.envEntries[evt.data]);
+        var formatted = format(window.envEntries[evt.data.id]);
         evt.source.postMessage(formatted, '*');
       }
 
