--- a/postAST.html
+++ b/postAST.html
@@ -18,6 +18,10 @@
 
   <body>
     <p>Send AST once</p>
-    <iframe height="500" src="views/postAST.html"/>
+    <iframe height="100" src="views/postAST.html"></iframe>
+    <iframe height="100" src="views/postAST.html"></iframe>
+    <iframe height="100" src="views/postAST.html"></iframe>
+    <iframe height="100" src="views/postAST.html"></iframe>
+    <iframe height="100" src="views/postAST.html"></iframe>
   </body>
 </html>
