--- a/postAllEntries.html
+++ b/postAllEntries.html
@@ -27,6 +27,10 @@
 
   <body>
     <p>Send all entries at once</p>
-    <iframe height="500" src="views/postAllEntries.html"/>
+    <iframe height="100" src="views/postAllEntries.html"></iframe>
+    <iframe height="100" src="views/postAllEntries.html"></iframe>
+    <iframe height="100" src="views/postAllEntries.html"></iframe>
+    <iframe height="100" src="views/postAllEntries.html"></iframe>
+    <iframe height="100" src="views/postAllEntries.html"></iframe>
   </body>
 </html>
