--- a/postEachEntry.html
+++ b/postEachEntry.html
@@ -28,6 +28,10 @@
 
   <body>
     <p>Send each entry individually</p>
-    <iframe height="500" src="views/postEachEntry.html"/>
+    <iframe height="100" src="views/postEachEntry.html"></iframe>
+    <iframe height="100" src="views/postEachEntry.html"></iframe>
+    <iframe height="100" src="views/postEachEntry.html"></iframe>
+    <iframe height="100" src="views/postEachEntry.html"></iframe>
+    <iframe height="100" src="views/postEachEntry.html"></iframe>
   </body>
 </html>
