--- a/postFormattedEntity.html
+++ b/postFormattedEntity.html
@@ -29,6 +29,10 @@
 
   <body>
     <p>Send each formatted entity individually</p>
-    <iframe height="500" src="views/postFormattedEntity.html"/>
+    <iframe height="100" src="views/postFormattedEntity.html"></iframe>
+    <iframe height="100" src="views/postFormattedEntity.html"></iframe>
+    <iframe height="100" src="views/postFormattedEntity.html"></iframe>
+    <iframe height="100" src="views/postFormattedEntity.html"></iframe>
+    <iframe height="100" src="views/postFormattedEntity.html"></iframe>
   </body>
 </html>
